# goit-pythonweb-hw-06

./: connect.py  models.py  my_select.py  pyproject.toml  seed.py  university.db
migrations/: env.py
migrations/versions/: 8efb5f9bf867_init.py
