[tool.poetry]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = "goit-pythonweb-hw-04"
authors = ["Andrii Korchevnyi"]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"

    

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
